<resources>
    <string name="app_name">ToDoNotes</string>
    <string name="title_home">Home</string>
    <string name="settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_the_note_title">Enter the note title</string>
    <string name="choose_notes_type">Choose note type</string>
    <string name="do_radio">do</string>
    <string name="doing_radio">doing</string>
    <string name="done_radio">done</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notes_app">Notes</string>
    <string name="choose_color">Choose color</string>
    <string name="priority">Priority</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="editNote">Edit note</string>
    <string name="create_date">Create date</string>
    <string name="search_and_filter_notes">Search and filter notes</string>
    <string name="cancel">cancel</string>
    <string name="with_color">With color</string>
    <string name="search_by_title">search by title</string>
    <string name="clear_data">Clear data</string>
    <!-- Preference Titles -->
    <string name="datastore_chooser">Choose the datastore type</string>

    <!-- Messages Preferences -->
    <string name="data_store">Default data store</string>
    <string name="description">description</string>
    <string name="title">title</string>
    <string name="choose_priority">choose priority</string>
    <string name="only_high_priority">Only high priority</string>

</resources>