<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="?android:attr/actionBarSize"
    tools:context=".ui.addition.AdditionFragment"
    android:animateLayoutChanges="true">

    <FrameLayout
        android:id="@+id/frame_color_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_color"
        tools:visibility="visible">

        <include
            android:id="@+id/include_color_picker"
            layout="@layout/color_picker" />
    </FrameLayout>


    <RadioGroup

        android:id="@+id/rg_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/et_description"
        app:layout_constraintStart_toStartOf="@+id/et_description"
        app:layout_constraintTop_toBottomOf="@id/tv_check_text_head">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="?attr/colorSecondary"
            android:checked="true"
            android:text="@string/do_radio" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_doing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="?attr/colorSecondary"
            android:text="@string/doing_radio" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="?attr/colorSecondary"
            android:text="@string/done_radio" />

    </RadioGroup>

    <View
        android:id="@+id/divider2"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_description"/>

    <View
        android:id="@+id/divider3"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_color_picker" />

    <View
        android:id="@+id/divider1"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_type" />

    <View
        android:id="@+id/divider4"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_priority" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin_container"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/submit"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_save"
        android:layout_marginVertical="@dimen/default_margin_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/b_delete"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_date" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin_container"
        android:backgroundTint="?attr/colorSecondary"
        android:text="@string/delete"
        android:visibility="gone"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b_submit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_date"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_color_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/default_margin_container"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_choose_color"
        app:layout_constraintStart_toEndOf="@id/tv_choose_color"
        app:layout_constraintTop_toTopOf="@id/tv_choose_color" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_title"
        style="@style/EditTextMaterialLayout"
        android:hint="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:maxLength="13"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_description"
        style="@style/EditTextMaterialLayout"
        android:layout_marginTop="@dimen/default_margin_container"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/s_priority_layout"
        style="@style/ExposedDropdownMenu"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:hint="@string/choose_priority"
        app:boxStrokeColor="@color/my_stroke_color"

        app:layout_constraintBottom_toBottomOf="@+id/tv_priority"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_priority">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/priority_dropdown"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_check_text_head"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_container"
        android:paddingStart="@dimen/default_margin_item"
        android:text="@string/choose_notes_type"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="@id/rg_type"
        app:layout_constraintStart_toStartOf="@+id/rg_type"
        app:layout_constraintTop_toBottomOf="@id/divider2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_choose_color"
        android:layout_width="@dimen/ChooseColorText"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_container"
        android:paddingVertical="@dimen/default_margin_container"
        android:paddingStart="@dimen/default_margin_item"
        android:text="@string/choose_color"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/divider1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_priority"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_container"
        android:paddingVertical="@dimen/default_margin_container"
        android:paddingStart="@dimen/default_margin_item"
        android:text="@string/priority"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/divider3" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_create_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/default_margin_container"
        android:paddingStart="@dimen/default_margin_item"
        android:text="@string/create_date"
        android:textAppearance="?attr/textAppearanceBody1"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/tv_title"
        app:layout_constraintTop_toBottomOf="@+id/divider4"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>