<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin_container"
>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_bsd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/search_and_filter_notes"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintBottom_toBottomOf="@+id/ib_cancel_filter"
        app:layout_constraintEnd_toStartOf="@id/ib_cancel_filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ib_cancel_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_cancel"
        android:textColor="?attr/colorSecondary"
        android:text="@string/cancel"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        android:drawableTint="?attr/colorOnSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_title_bsd"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_search"
        style="@style/EditTextMaterialLayout"
        android:layout_marginVertical="@dimen/default_margin_item"
        android:hint="@string/search_by_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ib_cancel_filter">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/divider1"
        style="@style/Divider"
        app:layout_constraintTop_toBottomOf="@+id/et_search"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_container"
        android:text="@string/with_color"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="@+id/et_search"
        app:layout_constraintStart_toStartOf="@+id/et_search"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/b_color_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/default_margin_container"
        app:cornerRadius="50dp"
        android:backgroundTint="@color/primaryColor_800"
        android:layout_margin="@dimen/default_margin_item"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <FrameLayout
        android:id="@+id/color_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        >

        <include
            android:id="@+id/include_color_picker"
            layout="@layout/color_picker" />

    </FrameLayout>


    <View
        android:id="@+id/divider2"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/color_picker"
        android:layout_marginBottom="@dimen/default_margin_container"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_filter_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_container"
        android:paddingEnd="@dimen/default_margin_container"
        android:gravity="start"
        android:text="dummy"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />


</androidx.constraintlayout.widget.ConstraintLayout>




